# kotogram

./: .gitignore  .pre-commit-config.yaml  INSTRUCTION.md  README.md  app.py  example.py  generate_rules.py  pyproject.toml  requirements.txt  setup.sh  start_server.sh  test_rule.py
kotogram/: __init__.py  analyzer.py  analyzers.py  grammar.py  patterns.py  token.py  types.py
rule_definitions/: README.md  __init__.py  n3_001.py  n3_003.py  n3_004.py  n3_005.py  n3_006.py  n3_007.py  n3_008.py  n3_009.py  n3_010.py  n3_011.py  n3_012.py  n3_013.py  n3_014.py  n3_015.py  n3_016.py  n3_017.py  n3_018.py  n3_019.py  n3_020.py  n3_021.py  n3_022.py  n3_023.py  n3_024.py  n3_025.py  n3_026.py  n3_027.py  n3_028.py  n3_029.py  n3_030.py  n3_031.py  n3_032.py  n3_033.py  n3_034.py  n3_035.py  n3_036.py  n3_037.py  n3_038.py  n3_039.py  (+20 more)
tests/: test_error_handling.py  test_grammar_matching.py  test_integration.py  test_kotogram.py
